--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,11 @@ h1, h2, h3 {
     display: flex;
     justify-content: center;
     align-items: center;
+    /* background: rgba(0, 0, 0, 0.5);; */
 }
 
 .landing-page .overlay {
     text-align: center;
-    background: rgba(0, 0, 0, 0.5);
     padding: 2rem;
     border-radius: 8px;
     color: white;
