--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,17 @@ header {
     color: #777;
     padding: 1rem;
 }
+.footer {
+  text-align: center;
+  padding: 15px;
+  background-color: purple;
+  font-size: 14px;
+  color: white;
+}
+
+.footer p {
+  margin: 5px 0;
+}
 
 /* ===== Responsive Design ===== */
 @media (max-width: 768px) {
